  is similar to php's in_array, only this one is recursive. [Dennis-Jan]
+ Made atkTimeAttribute work with a time string from the postvars. [Boy]
+ Added a $config_auth_userfk config option to configure the name of the
  foreign keys pointing to the usertable. [MartinL]
+ Added multilanguage multirecord search for atkMlAttribute. [Sandy]
* Fixed possible sql injection in db authentication. [Ivo]
* atkmlsplitter::addmlcondition() is now recursive to support relations
  with multiple mlnodes. [Martin]
* Added include/exclude lists as param for addmlcondition(). [Sandy]
* Improvements to atkImportHandler:
  * Some functional decomposition applied.
  * Updated documentation.
  * Improved error handling, import documents are validated before 
    they are added. 
  * Fixed bug that would cause first field never to be properly recognized
    at analysis time. [Boy]
* Currency attribute no longer formats the number as a decimal as 
  the numberattribute from which it extends does this anyway. [Boy]
* Fixed extended searching on OneToOne relations. [Boy]
* Removed a call-time-pass-by-reference from the oci9 driver. [Ivo]
* Fixed numerous php notices. (ATK now runs better when error_reporting set to
  E_ALL). [Ivo]
* The alphabetical index no longer breaks the search button. (bug #415) [Ivo]
* Made atkListAttribute searchable in embedded OneToMany. [Yury]
* Test fix: atkTextAttribute's unit testcase did not do a proper roundtrip
  check, causing the test to fail on Oracle installs. [Ivo]
* Changed atkLanguage stringid fallback module_node_stringid is now 
  the most important, followed by node_stringid and finally stringid. [Boy]
* Fixed atkUIs title() function as it failed to translate the module name
  properly. [Boy]
* Removed unnecessary brs from edit() of atkOneToMany. [Boy]
* Made atkTextAttribute not display rows or columns property if it doesn't
  have any value. [Boy]
* Function isSessionIdValid() now returns true for empty sessionid's. [Ivo]